back-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchid-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: matchid-backend
  template:
    metadata:
      labels:
        component: matchid-backend
    spec:
      containers:
        - name: matchid-backend
          image: matchid/matchid-backend
          ports:
            - containerPort: 8081
