elastic-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: elasticsearch
  template:
    metadata:
      labels:
        component: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
          ports:
            - containerPort: 9200
