back-service.yml
apiVersion: v1
kind: Service
metadata:
  name: matchid-backend-service
spec:
  ports:
    - name: http
      targetPort: 8081
      port: 8081
  selector:
    component: matchid-backend
